# VirtualBeauty

./: .gitignore  build.gradle  build.sh  gradle.properties  local.properties  settings.gradle
app/: build.gradle  cvte-android.keystore
app/src/androidTest/java/com/cvte/virtualbeauty/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cvte/virtualbeauty/: App.java  Constant.java
app/src/main/java/com/cvte/virtualbeauty/base/: BaseAppCompatActivity.java  BasePresenter.java  BaseView.java
app/src/main/java/com/cvte/virtualbeauty/camera/: Camera2Wrapper.java  CameraHelper.java  CameraWrapper.java
app/src/main/java/com/cvte/virtualbeauty/common/util/: ActivityUtils.java  CameraUtils.java  PermissionUtils.java  ReaderUtils.java  ToastUtils.java
app/src/main/java/com/cvte/virtualbeauty/common/view/: ExtRecyclerView.java  ViewUtils.java
app/src/main/java/com/cvte/virtualbeauty/data/render/: RenderScheme.java  RenderSchemeRepository.java  RenderSchemeRepositoryImpl.java
app/src/main/java/com/cvte/virtualbeauty/executor/: JobExecutor.java  PostThreadExecutor.java  ThreadExecutor.java  UIThread.java
app/src/main/java/com/cvte/virtualbeauty/internal/di/: ActivityScope.java
app/src/main/java/com/cvte/virtualbeauty/render/: RenderThread.java
app/src/main/java/com/cvte/virtualbeauty/ui/capture/: CaptureActivity.java  CaptureFragment.java  CapturePresenter.java  CapturePresenterImpl.java  CaptureView.java  RenderSchemeAdapter.java
app/src/main/java/com/cvte/virtualbeauty/ui/main/: MainActivity.java  MainFragment.java  MainPresenter.java  MainPresenterImpl.java  MainView.java
app/src/main/java/com/cvte/virtualbeauty/ui/store/: StoreActivity.java
app/src/main/res/layout/: activity_capture.xml  activity_main.xml  activity_store.xml  fragment_capture.xml  fragment_main.xml  item_render_scheme_list.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/cvte/virtualbeauty/: ExampleUnitTest.java
assets/renderschemes/: test1.rs  test2.rs
assets/shaders/: AlphaTextureColor.frag  AlphaTextureColor.vert  BilateralFilter.frag  BilateralFilter.vert  GaussianBlur.frag  Lighten.frag  Mesh.frag  Mesh.vert  PSGray.frag  PSLevels.frag  Polygon.frag  PolygonColor.frag  PolygonColor.vert  RawTexture2DImage.frag  SkinColor.frag  Texture2DImage.frag  TextureMultiplyColor.frag  TextureMultiplyTexture.frag  TextureOverlay.frag  Transform4_3To16_9.frag  YUV2RGB.frag  YUVSP2RGB.frag
assets/test/: test.json
common/: build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/java/com/cvte/virtualbeauty/common/utils/: LogUtil.java
common/src/main/java/com/cvte/virtualbeauty/config/: ConfigValues.java  LogConfig.java
common/src/main/res/values/: configs.xml
dlib-android/: AndroidManifest.xml  CMakeLists.txt  build.gradle
dlib-android/src/com/cvte/virtualbeauty/common/util/: ImageUtils.java
dlib-android/src/com/cvte/virtualbeauty/dlib/: Constants.java  DetectorHelper.java  DetectorRet.java  FaceDet.java  PedestrianDet.java  VisionDetRet.java
gradle/wrapper/: gradle-wrapper.properties
libs/arm64-v8a/: gdb.setup
libs/armeabi/: gdb.setup
libs/armeabi-v7a/: gdb.setup
libs/mips/: gdb.setup  gdbserver
libs/mips64/: gdb.setup  gdbserver
libs/x86/: gdb.setup  gdbserver
libs/x86_64/: gdb.setup  gdbserver
meitu/: build.gradle
meitu/src/main/: AndroidManifest.xml
meitu/src/main/java/com/meitu/core/facedetect/: FaceDetector.java
meitu/src/main/java/com/meitu/core/types/: FaceData.java  NativeBitmap.java
native/dlib/: .gitignore
native/dlib/android/jni/: Android.mk
native/dlib/docs/docs/: bayes.xml  enable_if.html
native/jni/jni_common/: jni_bitmap2mat.cpp  jni_bitmap2mat.h  jni_fileutils.cpp  jni_fileutils.h  jni_primitives.h  jni_utils.cpp  jni_utils.h  rgb2yuv.cpp  rgb2yuv.h  types.h  yuv2rgb.cpp  yuv2rgb.h
native/jni/jni_detections/: ThinPlateSpline.cpp  ThinPlateSpline.h  detector.h  jni_face_det.cpp  jni_imageutils.cpp  jni_pedestrian_det.cpp
native/jni/jni_render/: alphatexturecolor.cpp  alphatexturecolor.h  basemesh.h  basetexture.h  bilateralfilter.cpp  bilateralfilter.h  cameralighten.cpp  cameralighten.h  cameratexture.cpp  cameratexture.h  gaussianblur.cpp  gaussianblur.h  lipregion.cpp  lipregion.h  objmesh.cpp  objmesh.h  polygoncolor.cpp  polygoncolor.h  psgray.cpp  psgray.h  pslevels.cpp  pslevels.h  rendercontroller.cpp  rendercontroller.h  skincolor.cpp  skincolor.h  texture2d.cpp  texture2d.h  texturemultiplycolor.cpp  texturemultiplycolor.h  texturemultiplytexture.cpp  texturemultiplytexture.h  textureoverlay.cpp  textureoverlay.h  transform4_3to16_9.cpp  transform4_3to16_9.h  yuv2rgb.cpp  yuv2rgb.h  yuvsp2rgb.cpp  yuvsp2rgb.h
native/jni/jni_render/common/: platform_asset_utils.cpp  platform_asset_utils.h
native/jni/jni_render/gl/: gl_data.cpp  gl_data.h  gl_obj_loader.cpp  gl_obj_loader.h  gl_program_loader.cpp  gl_program_loader.h  glfundamentals.h  glutils.cpp  glutils.h
native/jni/jni_render/image/: image_data.cpp  image_data.h
native/seetaface/: .gitignore
native/seetaface/FaceAlignment/: Android.mk
native/seetaface/FaceAlignment/src/: sift.cpp
native/seetaface/FaceDetection/: Android.mk
native/seetaface/jni/: Android.mk
opencv-android/: build.gradle
opencv-android/src/main/: AndroidManifest.xml
render/: CMakeLists.txt  build.gradle  proguard-rules.pro
render/src/main/: AndroidManifest.xml
render/src/main/java/com/cvte/virtualbeauty/gles/: GlComponent.java  GlUtil.java  IGlComponentLoader.java  LipTriangulate.java
render/src/main/java/com/cvte/virtualbeauty/render/: IRenderAdapter.java  RenderController.java
web/: build.gradle
web/src/main/: AndroidManifest.xml
web/src/main/java/com/cvte/virtualbeauty/web/: ApiProvider.java  RestApi.java  RestApiImpl.java
web/src/main/java/com/cvte/virtualbeauty/web/service/: MyService.java
web/src/main/res/values/: configs.xml
web/src/test/java/com/cvte/virtualbeauty/web/: ApiProviderTest.java
(+8 files in other folders)
